--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   position: relative;
   overflow: hidden;
 }
-.header h1{
+.header h1 {
   text-align: center;
   margin-top: 150px;
   color: #fff;
@@ -85,6 +85,7 @@ nav img {
   position: relative;
   cursor: pointer;
   transition: 1s;
+  margin: 0 20px;
 }
 .hero-btn:hover {
   border: 1px solid #f44336;
@@ -137,7 +138,7 @@ nav .bx {
   font-size: 36px;
   font-weight: 600;
 }
- p {
+p {
   color: #777;
   font-size: 14px;
   font-weight: 300;
@@ -146,26 +147,26 @@ nav .bx {
 }
 .row {
   margin-top: 5%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 .course-col {
-  flex-basis: 31%;
-  background: #fff3f3;
+  margin: 10px;
+  flex-basis: 10%;
+  background: #ffffff;
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 20px 12px;
   box-sizing: border-box;
   transition: 0.5s;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 .course-col h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
 }
-.course-col:hover {
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-}
+
 
 @media (max-width: 700px) {
   .row {
@@ -267,69 +268,66 @@ nav .bx {
   margin-right: 30px;
   border-radius: 50%;
 }
-.testimonial-col  p{
+.testimonial-col p {
   padding: 0;
 }
-.testimonial-col h3{
+.testimonial-col h3 {
   margin-top: 15px;
   text-align: left;
 }
-.testimonial-col .bx{
+.testimonial-col .bx {
   color: #f44336;
 }
-@media(max-width:700px){
+@media (max-width: 700px) {
   .testimonial-col img {
-  
     margin-left: 0px;
     margin-right: 15px;
-    
   }
 }
 /* call to action */
-.cta{
+.cta {
   margin: 100px auto;
   width: 80%;
-  background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/banner2.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(images/banner2.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
   text-align: center;
   padding: 100px 0px;
 }
-.cta h1{
+.cta h1 {
   color: #fff;
   margin-bottom: 40px;
   padding: 0;
 }
 /* footer */
-.footer{
+.footer {
   width: 100%;
   text-align: center;
   padding: 30px 0px;
-
 }
-.footer h4{
+.footer h4 {
   margin-bottom: 25px;
   margin-top: 20px;
   font-weight: 600;
 }
-.icons .bx{
+.icons .bx {
   color: #f44336;
   margin: 0 13px;
   cursor: pointer;
   padding: 18px 0;
-
-
 }
-.bx-heart{
+.bx-heart {
   color: #f44336;
 }
 
 /* About page */
-.sub-header{
+.sub-header {
   height: 50vh;
   width: 100%;
-  background: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpg);
+  background: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(images/background.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -337,67 +335,65 @@ nav .bx {
 }
 .sub-header,
 .about-us,
-.about-col{
+.about-col {
   overflow: hidden;
 }
-.sub-header h1{
+.sub-header h1 {
   margin-top: 100px;
 }
-.about-us{
+.about-us {
   width: 80%;
   margin: auto;
   overflow: hidden;
   padding-top: 80px;
   padding-bottom: 50px;
 }
-.about-col{
+.about-col {
   flex-basis: 45%;
   padding: 30px 2px;
 }
-.about-col img{
+.about-col img {
   width: 100%;
 }
-.about-col h1{
+.about-col h1 {
   padding-top: 0;
-
 }
-.about-col p{
+.about-col p {
   padding: 15px 0 25px;
 }
-.red-btn{
+.red-btn {
   border: 1px solid #f44336;
   background: transparent;
   color: #f44336;
 }
-.red-btn:hover{
+.red-btn:hover {
   color: #fff;
 }
 /* for blog */
-.blog-content{
+.blog-content {
   width: 80%;
   margin: auto;
   padding: 60px 0;
 }
-.blog-left{
+.blog-left {
   flex-basis: 65%;
 }
-.blog-left img{
+.blog-left img {
   width: 100%;
 }
-.blog-left h2{
+.blog-left h2 {
   color: #222;
   font-weight: 600;
   margin: 30px 0;
 }
-.blog-left p{
+.blog-left p {
   color: #999;
   padding: 0;
 }
-.blog-right{
+.blog-right {
   flex-basis: 32%;
-
 }
-.blog-right h3{
+.blog-right h3 {
   background: #f44336;
   color: #fff;
   padding: 7px 0;
@@ -405,7 +401,7 @@ nav .bx {
   margin-bottom: 20px;
   text-align: center;
 }
-.blog-right div{
+.blog-right div {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -413,74 +409,100 @@ nav .bx {
   padding: 8px;
   box-sizing: border-box;
 }
-.command-box{
+.command-box {
   border: 1px solid #ccc;
   margin: 50px 0;
   padding: 10px 20px;
-
 }
-.command-box h3{
+.command-box h3 {
   text-align: left;
 }
 .command-form input,
-.command-form textarea{
-width: 100%;
-padding: 10px;
-margin: 15px 0;
-box-sizing: border-box;
-border: none;
-outline: none;
-background: #f0f0f0;
+.command-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 15px 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background: #f0f0f0;
 }
-.command-form button{
+.command-form button {
   margin: 10px 0;
 }
 
-
 /* contact page */
-.location{
+.location {
   width: 80%;
   margin: auto;
   padding: 80px 0;
 }
-.location iframe{
+.location iframe {
   width: 100%;
 }
-.contact-us{
+.contact-us {
   width: 80%;
   margin: auto;
 }
-.contact-col{
+.contact-col {
   flex-basis: 48%;
   margin-bottom: 30px;
 }
-.contact-col div{
+.contact-col div {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
 }
-.contact-col div .bx{
+.contact-col div .bx {
   font-size: 28px;
   color: #f44336;
   margin: 10px;
   margin-right: 30px;
 }
-.contact-col div p{
+.contact-col div p {
   padding: 0;
-
 }
-.contact-col div h5{
+.contact-col div h5 {
   font-size: 20px;
   margin-bottom: 5px;
   color: #555;
   font-weight: 500;
 }
-.contact-col input, .contact-col textarea{
+.contact-col input,
+.contact-col textarea {
   width: 100%;
   padding: 15px;
   margin-bottom: 17px;
   outline: none;
   border: 1px solid #ccc;
 
-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.selection-box {
+  padding: 10px 30px;
+  font-size: 18px;
+}
+.type-star{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 14px;
+  color: #555;
+}
+.type{
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  gap: 6px;
+  font-size: 12px;
+}
+#searchInput{
+  padding: 10px 20px;
+  width: 40%;
+  outline: none;
+  border-radius: 75px;
+  border: 0;
+  background: #222;
+  color: #fff;
+  margin-top: 20px;
 }
